--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,5 +1,5 @@
 body {
-    background-color: darkgrey;
+    background-color: brown;
 }
 
 body, h1, h2, p, header{
@@ -25,5 +25,5 @@ p {
     font-size: 20px;
 }
 a{
-    color:blue
+    color:cornsilk
 }
