--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -2,7 +2,7 @@ body {
     background-color: rgba(58,175,169,255);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 80px;
-    font-size: 16px;
+    font-size: 12px;
     color: rgba(21,39,45,255);
 }
 
@@ -24,10 +24,20 @@ h1 {
     color: white;
     text-align: center;
 }
-  
+
+h2 {
+  color: white;
+  text-align: center;
+}
+
+h3 {
+  color: white;
+  text-align: center;
+}
+
 p {
     font-family: verdana;
-    font-size: 20px;
+    font-size: 12px;
 }
 a{
     color:cornsilk;
