--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -13,4 +13,6 @@
     <a href="website_evaluation.html">Website Evaluation</a>
     |
     <a href="firstscripts.html">First JS</a>
+    |
+    <a href="byo_intro.html">BYO Intro</a>
 </nav>
