--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -15,4 +15,6 @@
     <a href="firstscripts.html">First JS</a>
     |
     <a href="byo_intro.html">BYO Intro</a>
+    |
+    <a href="project1.html">Project 1</a>
 </nav>
