--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,30 +1,31 @@
 body {
-    background-color: rgba(58,175,169,255);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding: 80px;
-    font-size: 12px;
-    color: rgba(21,39,45,255);
-    margin: 0;
+  background-color: rgba(58, 175, 169, 255);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  padding: 80px;
+  font-size: 12px;
+  color: rgba(21, 39, 45, 255);
+  margin: 0;
 }
 
-footer, header{
+footer,
+header {
   text-align: center;
 }
 
-.centered-image{
+.centered-image {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
 .caption-italic {
-    font-style: italic;
-    text-align: center;
+  font-style: italic;
+  text-align: center;
 }
-  
+
 h1 {
-    color: white;
-    text-align: center;
+  color: white;
+  text-align: center;
 }
 
 h2 {
@@ -38,56 +39,67 @@ h3 {
 }
 
 p {
-    font-family: verdana;
-    font-size: 12px;
+  font-family: verdana;
+  font-size: 12px;
 }
 
-a{
-    color:cornsilk;
-    text-align: center;
-    text-decoration: none;
+a {
+  color: cornsilk;
+  text-align: center;
+  text-decoration: none;
 }
 
-table{
-    border-collapse: collapse;
-    width: 100%;
+table {
+  border-collapse: collapse;
+  width: 100%;
 }
-th, td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  tr:nth-child(odd) {
-    background-color: #f2f2f2; 
-  }
-  
-  tr:nth-child(even) {
-    background-color: #ddd; 
-  }
-  
-  tr:first-child {
-    background-color: #333;
-    color: white; 
-  }
-  #survey-form{
-    display: block;
-    border: 2px solid black;
-    text-align: center;
-  }
-  .title{
-    text-align: center;
-  }
-  
-  #Wireframe{
-    display: block;
-    border: 2px solid black;
-    text-align: center;
-    width: 75%;
-    margin-left: auto;
-    margin-right: auto;
-  }
 
-  #wireframecaption{
-    text-align: center;
+th,
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+  background-color: #ddd;
+}
+
+tr:first-child {
+  background-color: #333;
+  color: white;
+}
+
+#survey-form {
+  display: block;
+  border: 2px solid black;
+  text-align: center;
+}
+
+.title {
+  text-align: center;
+}
+
+#Wireframe,
+#Sitemap {
+  display: block;
+  border: 2px solid black;
+  text-align: center;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#wireframecaption {
+  text-align: center;
+}
+
+@media (min-width: 576px) {
+  body {
+    padding: 80px;
   }
+}
