--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -17,4 +17,8 @@
     <a href="byo_intro.html">BYO Intro</a>
     |
     <a href="project1.html">Project 1</a>
+    |
+    <a href="calculator_try.html">Calculator Try</a>
+    |
+    <a href="calculator_fcc.html">Calculator FCC</a>
 </nav>
