--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -98,6 +98,46 @@ tr:first-child {
   text-align: center;
 }
 
+#calculator {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  max-width: 400px;
+  margin: auto;
+  background-color: #333;
+  border: 1px solid #222;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+}
+
+.calc-button {
+  width: 100%;
+  padding: 15px;
+  font-size: 18px;
+  text-align: center;
+  cursor: pointer;
+  border: 1px solid #222;
+  background-color: #e67e22; 
+  color: #fff;
+  transition: background-color 0.3s ease;
+}
+
+.calc-button:hover {
+  background-color: #d35400; 
+}
+
+#displayCalculatorTry {
+  grid-column: span 4;
+  padding: 10px;
+  font-size: 20px;
+  text-align: right;
+  border: 1px solid #222;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  background-color: #222; 
+}
+
 @media (min-width: 576px) {
   body {
     padding: 80px;
