--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -21,4 +21,6 @@
     <a href="calculator_try.html">Calculator Try</a>
     |
     <a href="calculator_fcc.html">Calculator FCC</a>
+    |
+    <a href="arrays.html">Arrays</a>
 </nav>
