--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -23,4 +23,6 @@
     <a href="calculator_fcc.html">Calculator FCC</a>
     |
     <a href="arrays.html">Arrays</a>
+    |
+    <a href="project/index.html">Client Project</a>
 </nav>
