--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -25,4 +25,10 @@
     <a href="arrays.html">Arrays</a>
     |
     <a href="project/index.html">Client Project</a>
+    |
+    <a href="hobby/index.html">Hobby Project</a>
+    |
+    <a href="interactiveDrawing.html">Interactive Drawing</a>
+    |
+    <a href="slideshow.html">Slideshow</a>
 </nav>
