--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -14,7 +14,8 @@
     <a href="https://www.linkedin.com/in/jay-patel-a6a126205/"> LinkedIn </a>
 
 </nav>
-<a href="patel-enterprises.com/index.html">Page Built by Patel Enterprises © 2023</a>
+<a href="patel-enterprises.com/index.html">Page Built by Patel Enterprises © 2023,</a>
+<a href="https://www.freecodecamp.org/certification/jayp-8/responsive-web-design">Certified in Responsive Web Design</a>
 <br>
 <a href="https://validator.w3.org/check?uri=referer">
     <img style="border:0;width:88px;height:31px"
