--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -31,4 +31,6 @@
     <a href="interactiveDrawing.html">Interactive Drawing</a>
     |
     <a href="slideshow.html">Slideshow</a>
+    |
+    <a href="activity14.html">Activity 14</a>
 </nav>
